<resources>
<string name="app_name">HelloAndroid</string>
    <string name="udacity">Udacity</string>
    <string name="_2465_latham_st">2465 Latham St</string>
    <string name="mountain_view_ca_94043">Mountain View, CA 94043</string>
    <string name="_650_555_5555">650-555-5555</string>
    <string name="www_udacity_com">www.udacity.com</string>
    <string name="contact_us">CONTACT US</string>
    <color name="white">#FFFFFF</color>
    </resources>
